--- a/template/core-dist/src/app/pages/affiliates-page/affiliates.component.html
+++ b/template/core-dist/src/app/pages/affiliates-page/affiliates.component.html
@@ -1,7 +1,7 @@
+<button md-raised-button color="primary" class="entity-index__add" (click)="addEntity()">Add New</button>
+
 <md-card class="entity-index__card">
-  <md-card-title class="entity-index__card__title"> <span>Affiliates Index</span> </md-card-title>
   <md-card-content class="entity-index__card__content">
-    <button md-raised-button color="primary" (click)="addEntity()">New Affiliate</button>
 
     <table class="entity-index__table highlight">
       <thead class="entity-index__table__header">
@@ -18,18 +18,21 @@
       </thead>
 
       <tbody>
-      <tr *ngFor="let affiliate of entities">
-        <td>{{affiliate.affiliateId}}</td>
-        <td>{{affiliate.subId1}}</td>
-        <td>{{affiliate.subId2}}</td>
-        <td>{{affiliate.subId3}}</td>
-        <td>{{affiliate.subId4}}</td>
-        <td>{{affiliate.subId5}}</td>
-        <td>{{affiliate.clickId}}</td>
+      <tr *ngFor="let entity of entities">
+        <td>{{entity.affiliateId}}</td>
+        <td>{{entity.subId1}}</td>
+        <td>{{entity.subId2}}</td>
+        <td>{{entity.subId3}}</td>
+        <td>{{entity.subId4}}</td>
+        <td>{{entity.subId5}}</td>
+        <td>{{entity.clickId}}</td>
         <td>
-          <md-icon class="entity-index__table__body__action" (click)="viewEntity(affiliate.id)">visibility</md-icon>
-          <md-icon class="entity-index__table__body__action" (click)="updateEntity(affiliate.id)">mode_edit</md-icon>
-          <md-icon class="entity-index__table__body__action" (click)="deleteEntity(affiliate.id)">delete</md-icon>
+          <button md-icon-button [md-menu-trigger-for]="actionsMenu"><md-icon>more_vert</md-icon></button>
+          <md-menu #actionsMenu="mdMenu" x-position="before">
+            <button md-menu-item (click)="viewEntity(entity.id)">view</button>
+            <button md-menu-item (click)="updateEntity(entity.id)">update</button>
+            <button md-menu-item (click)="deleteEntity(entity.id)">delete</button>
+          </md-menu>
         </td>
       </tr>
       </tbody>
