--- a/template/core-dist/src/app/pages/fulfillment-providers/fulfillment-providers.component.html
+++ b/template/core-dist/src/app/pages/fulfillment-providers/fulfillment-providers.component.html
@@ -1,7 +1,7 @@
+<button md-raised-button color="primary" class="entity-index__add" (click)="addEntity()">Add New</button>
+
 <md-card class="entity-index__card">
-  <md-card-title class="entity-index__card__title"> <span>Fulfillment Provider Index</span> </md-card-title>
   <md-card-content class="entity-index__card__content">
-    <button md-raised-button color="primary" (click)="addEntity()">New Fulfillment Provider</button>
 
     <table class="entity-index__table highlight">
       <thead class="entity-index__table__header">
@@ -16,16 +16,19 @@
       </thead>
 
       <tbody>
-      <tr *ngFor="let fulfillmentProvider of entities">
-        <td>{{fulfillmentProvider.name}}</td>
-        <td>{{fulfillmentProvider.username}}</td>
-        <td>{{fulfillmentProvider.password}}</td>
-        <td>{{fulfillmentProvider.endpoint}}</td>
-        <td>{{fulfillmentProvider.provider}}</td>
+      <tr *ngFor="let entity of entities">
+        <td>{{entity.name}}</td>
+        <td>{{entity.username}}</td>
+        <td>{{entity.password}}</td>
+        <td>{{entity.endpoint}}</td>
+        <td>{{entity.provider}}</td>
         <td>
-          <md-icon class="entity-index__table__body__action" (click)="viewEntity(fulfillmentProvider.id)">visibility</md-icon>
-          <md-icon class="entity-index__table__body__action" (click)="updateEntity(fulfillmentProvider.id)">mode_edit</md-icon>
-          <md-icon class="entity-index__table__body__action" (click)="deleteEntity(fulfillmentProvider.id)">delete</md-icon>
+          <button md-icon-button [md-menu-trigger-for]="actionsMenu"><md-icon>more_vert</md-icon></button>
+          <md-menu #actionsMenu="mdMenu" x-position="before">
+            <button md-menu-item (click)="viewEntity(entity.id)">view</button>
+            <button md-menu-item (click)="updateEntity(entity.id)">update</button>
+            <button md-menu-item (click)="deleteEntity(entity.id)">delete</button>
+          </md-menu>
         </td>
       </tr>
       </tbody>
