--- a/template/core-dist/src/app/pages/product-schedule-page/product-schedule.component.html
+++ b/template/core-dist/src/app/pages/product-schedule-page/product-schedule.component.html
@@ -1,7 +1,7 @@
+<button md-raised-button color="primary" class="entity-index__add" (click)="addEntity()">Add New</button>
+
 <md-card class="entity-index__card">
-  <md-card-title class="entity-index__card__title"> <span>Product Index</span> </md-card-title>
   <md-card-content class="entity-index__card__content">
-    <button md-raised-button color="primary" (click)="addEntity()">New Product Schedule</button>
 
     <table class="entity-index__table highlight">
       <thead class="entity-index__table__header">
@@ -13,13 +13,16 @@
       </thead>
 
       <tbody>
-      <tr *ngFor="let productSchedule of entities">
-        <td>{{productSchedule.id}}</td>
-        <td>{{productSchedule.schedules.length}}</td>
+      <tr *ngFor="let entity of entities">
+        <td>{{entity.id}}</td>
+        <td>{{entity.schedules.length}}</td>
         <td>
-          <md-icon class="entity-index__table__body__action" (click)="viewEntity(productSchedule.id)">visibility</md-icon>
-          <md-icon class="entity-index__table__body__action" (click)="updateEntity(productSchedule.id)">mode_edit</md-icon>
-          <md-icon class="entity-index__table__body__action" (click)="deleteEntity(productSchedule.id)">delete</md-icon>
+          <button md-icon-button [md-menu-trigger-for]="actionsMenu"><md-icon>more_vert</md-icon></button>
+          <md-menu #actionsMenu="mdMenu" x-position="before">
+            <button md-menu-item (click)="viewEntity(entity.id)">view</button>
+            <button md-menu-item (click)="updateEntity(entity.id)">update</button>
+            <button md-menu-item (click)="deleteEntity(entity.id)">delete</button>
+          </md-menu>
         </td>
       </tr>
       </tbody>
