--- a/template/core-dist/src/assets/scss/_entity-view.scss
+++ b/template/core-dist/src/assets/scss/_entity-view.scss
@@ -52,3 +52,98 @@
     }
   }
 }
+
+.entity {
+  position: absolute;
+  top: 65px;
+  right: 0;
+  width: 30%;
+  min-width: 380px;
+  border-left: solid 1px gray;
+  border-bottom: solid 1px gray;
+  background: white;
+  box-shadow: -1px 1px 8px gray;
+  z-index: 1;
+
+  &__nav {
+    padding: 15px 18px 10px 18px;
+
+    md-icon {
+      cursor: pointer;
+    }
+
+    &__close {
+
+    }
+
+    &__add {
+      float: right;
+    }
+
+    &__more{
+      float: right;
+    }
+  }
+
+  &__caption {
+    padding: 15px 18px 20px 18px;
+    font-weight: 600;
+  }
+
+  &__content {
+    margin-bottom: 20px;
+
+    .md-tab-label {
+      width: 50%;
+    }
+
+    .md-tab-list {
+      md-ink-bar {
+        margin-left: 0 !important;
+        width: 50% !important;
+      }
+    }
+
+    &__general {
+      padding: 18px;
+      cursor: pointer;
+
+      &__title {
+        border-bottom: solid 1px gray;
+
+        md-icon {
+          float: right;
+          vertical-align: middle;
+        }
+
+        span {
+          vertical-align: middle;
+          font-size: 16px;
+          font-weight: 500;
+        }
+      }
+
+      &__content {
+
+        div {
+          padding: 5px 18px 10px 18px;
+          box-sizing: border-box;
+
+          &:hover {
+            background: #F3F3F3;
+          }
+
+          span {
+            font-size: 15px;
+            cursor: default;
+
+            &:first-child {
+              margin-right: 10px;
+              font-weight: 600;
+            }
+          }
+        }
+      }
+    }
+  }
+}
