--- a/template/core-dist/src/assets/scss/_navigation.scss
+++ b/template/core-dist/src/assets/scss/_navigation.scss
@@ -6,7 +6,9 @@ $sidebar-color-light: #385F8D;
 $sidebar-color-middle: #2C486F;
 $sidebar-color-dark: #171F38;
 
-main > .container {
+.dashboard {
+  margin: auto;
+
   @media #{$large-and-up} {
     padding-top: 20px;
     width: 90%;
@@ -168,6 +170,11 @@ md-nav-list.side-navigation {
 header md-toolbar {
   box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
   background-color: rgb(255, 255, 255);
+
+  @media #{$medium-and-down} {
+    background: $sidebar-color-light !important;
+  }
+
   md-toolbar-row:not(:first-child) {
     @media #{$medium-and-down} {
       height: 44px;
@@ -251,6 +258,10 @@ header md-toolbar {
     padding: 10px;
     line-height: 44px;
   }
+
+  @media #{$medium-and-down} {
+    color: #ffffff;
+  }
 }
 
 #user-dropdown-toggler {
@@ -259,12 +270,6 @@ header md-toolbar {
     border-radius: 3px;
     padding: 10px;
     line-height: 44px;
-  }
-}
-
-@media #{$large-and-up} {
-  .container {
-    width: 85%;
   }
 }
 
