--- a/template/core-dist/src/assets/scss/_entity-view.scss
+++ b/template/core-dist/src/assets/scss/_entity-view.scss
@@ -59,6 +59,7 @@
   right: 0;
   width: 30%;
   min-width: 380px;
+  height: 100%;
   border-left: solid 1px gray;
   border-bottom: solid 1px gray;
   background: white;
