--- a/template/core-dist/src/app/navigation/topnav/topnav.component.scss
+++ b/template/core-dist/src/app/navigation/topnav/topnav.component.scss
@@ -23,7 +23,7 @@ $main-color: #9B9A9B;
     }
   }
 
-  &__company {
+  &__acl {
     &__icon {
       color: $main-color;
       margin-left: 10px;
@@ -48,6 +48,24 @@ $main-color: #9B9A9B;
 
       @media #{$medium-and-down} {
         color: #ffffff;
+      }
+    }
+
+    &__menu {
+      position: absolute;
+      top: 64px;
+      right: 285px;
+      background: white;
+      box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);
+      z-index: 1;
+
+      div {
+        padding: 10px 20px;
+        cursor: pointer;
+
+        &:hover {
+          background-color: rgba(0, 0, 0, 0.0588);
+        }
       }
     }
   }
