--- a/template/core-dist/src/assets/scss/_navigation.scss
+++ b/template/core-dist/src/assets/scss/_navigation.scss
@@ -238,6 +238,10 @@ header md-toolbar {
       color: $font-color;
     }
   }
+
+  .md-toolbar-layout {
+    z-index: 2;
+  }
 }
 
 [md-icon-button] {
