--- a/template/core-dist/src/assets/scss/_entity-view.scss
+++ b/template/core-dist/src/assets/scss/_entity-view.scss
@@ -54,17 +54,27 @@
 }
 
 .entity {
-  position: absolute;
-  top: 65px;
+  position:absolute;
   right: 0;
-  width: 30%;
-  min-width: 380px;
+  margin-top: 65px;
   height: 100%;
+  width: 99%;
   border-left: solid 1px gray;
   border-bottom: solid 1px gray;
   background: white;
-  box-shadow: -1px 1px 8px gray;
+  box-shadow: -1px -1px 2px rgba(0, 0, 0, 0.15);
   z-index: 1;
+  overflow: auto;
+
+  &--wrapper {
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100%;
+    width: 30%;
+    min-width: 380px;
+    overflow: hidden;
+  }
 
   &__nav {
     padding: 15px 18px 10px 18px;
