--- a/template/core-dist/src/app/pages/access-keys-page/access-keys.component.html
+++ b/template/core-dist/src/app/pages/access-keys-page/access-keys.component.html
@@ -14,33 +14,23 @@
     <td>{{entity.accessKey}}</td>
     <td>{{entity.secretKey}}</td>
     <td>
-      <button md-icon-button [md-menu-trigger-for]="actionsMenu"><md-icon>more_vert</md-icon></button>
-      <md-menu #actionsMenu="mdMenu" x-position="before">
-        <button md-menu-item (click)="viewEntity(entity.id)">view</button>
-        <button md-menu-item (click)="updateEntity(entity.id)">update</button>
-        <button md-menu-item (click)="deleteEntity(entity.id)">delete</button>
-      </md-menu>
+      <table-actions
+        [service]="service"
+        (viewClicked)="viewEntity(entity.id)"
+        (copyClicked)="copyEntity(entity.id)"
+        (exportClicked)="exportEntity(entity.id)">
+      </table-actions>
     </td>
   </tr>
   </tbody>
 </table>
 
-<div class="entity-index__pagination__buttons">
-  <span>Rows per page : {{limit}} </span>
-  <button md-icon-button [md-menu-trigger-for]="paginationMenu">
-    <md-icon>arrow_drop_down</md-icon>
-  </button>
-
-  <md-menu #paginationMenu="mdMenu">
-    <button md-menu-item *ngFor="let val of paginationValues" (click)="updateLimit(val)">
-      {{val}}
-    </button>
-  </md-menu>
-
-  <button class="entity-index__pagination__buttons__button--left" [disabled]="page <= 0" md-icon-button (click)="previous()">
-    <md-icon>keyboard_arrow_left</md-icon>
-  </button>
-  <button [disabled]="!hasMorePages()" md-icon-button (click)="next()">
-    <md-icon>keyboard_arrow_right</md-icon>
-  </button>
-</div>
+<table-pagination
+  [limit]="limit"
+  [paginationValues]="paginationValues"
+  [previousDisabled]="page <= 0"
+  [nextDisabled]="!hasMorePages()"
+  (previous)="previous()"
+  (next)="next()"
+  (updateLimit)="updateLimit($event)">
+</table-pagination>
