--- a/template/core-dist/src/app/pages/campaigns-page/campaigns.component.html
+++ b/template/core-dist/src/app/pages/campaigns-page/campaigns.component.html
@@ -1,3 +1,5 @@
+<campaign *ngIf="showEntityDetails" [entityId]="showEntityId" (close)="hideEntityDetails()"></campaign>
+
 <button md-raised-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="addEntity()">Add New</button>
 
 <md-card class="entity-index__card">
@@ -15,9 +17,9 @@
 
       <tbody>
         <tr *ngFor="let entity of entities">
-          <td>{{entity.name}}</td>
-          <td>{{entity.loadBalancer.merchantProviderConfigurations.length}}</td>
-          <td>{{entity.productSchedules.length}}</td>
+          <td (click)="viewEntity(entity.id)">{{entity.name}}</td>
+          <td (click)="viewEntity(entity.id)">{{entity.loadBalancer.merchantProviderConfigurations.length}}</td>
+          <td (click)="viewEntity(entity.id)">{{entity.productSchedules.length}}</td>
           <td>
             <table-actions
               [service]="service"
