--- a/template/core-dist/src/app/pages/credit-cards-page/credit-cards.component.html
+++ b/template/core-dist/src/app/pages/credit-cards-page/credit-cards.component.html
@@ -1,3 +1,5 @@
+<credit-card *ngIf="showEntityDetails" [entityId]="showEntityId" (close)="hideEntityDetails()"></credit-card>
+
 <button md-raised-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="addEntity()">Add New</button>
 
 <md-card class="entity-index__card">
@@ -17,11 +19,11 @@
 
       <tbody>
       <tr *ngFor="let entity of entities">
-        <td>{{entity.name}}</td>
-        <td>{{entity.expiration}}</td>
-        <td>{{entity.address.country}}</td>
-        <td>{{entity.address.state}}</td>
-        <td>{{entity.address.city}}</td>
+        <td (click)="viewEntity(entity.id)">{{entity.name}}</td>
+        <td (click)="viewEntity(entity.id)">{{entity.expiration}}</td>
+        <td (click)="viewEntity(entity.id)">{{entity.address.country}}</td>
+        <td (click)="viewEntity(entity.id)">{{entity.address.state}}</td>
+        <td (click)="viewEntity(entity.id)">{{entity.address.city}}</td>
         <td>
           <table-actions
             [service]="service"
