--- a/template/core-dist/src/app/pages/customers-page/customers.component.html
+++ b/template/core-dist/src/app/pages/customers-page/customers.component.html
@@ -1,3 +1,5 @@
+<customer *ngIf="showEntityDetails" [entityId]="showEntityId" (close)="hideEntityDetails()"></customer>
+
 <button md-raised-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="addEntity()">Add New</button>
 
 <md-card class="entity-index__card">
@@ -16,10 +18,10 @@
 
       <tbody>
       <tr *ngFor="let entity of entities">
-        <td>{{entity.firstName}}</td>
-        <td>{{entity.lastName}}</td>
-        <td>{{entity.address.state}}</td>
-        <td>{{entity.address.city}}</td>
+        <td (click)="viewEntity(entity.id)">{{entity.firstName}}</td>
+        <td (click)="viewEntity(entity.id)">{{entity.lastName}}</td>
+        <td (click)="viewEntity(entity.id)">{{entity.address.state}}</td>
+        <td (click)="viewEntity(entity.id)">{{entity.address.city}}</td>
         <td>
           <table-actions
             [service]="service"
