--- a/template/core-dist/src/app/pages/smtp-providers-page/smtp-providers.component.html
+++ b/template/core-dist/src/app/pages/smtp-providers-page/smtp-providers.component.html
@@ -1,3 +1,5 @@
+<smtp-provider *ngIf="showEntityDetails" [entityId]="showEntityId" (close)="hideEntityDetails()"></smtp-provider>
+
 <button md-raised-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="addEntity()">Add New</button>
 
 <md-card class="entity-index__card">
@@ -17,11 +19,11 @@
 
       <tbody>
       <tr *ngFor="let entity of entities">
-        <td>{{entity.name}}</td>
-        <td>{{entity.hostname}}</td>
-        <td>{{entity.ipAddress}}</td>
-        <td>{{entity.hostname}}</td>
-        <td>{{entity.port}}</td>
+        <td (click)="viewEntity(entity.id)">{{entity.name}}</td>
+        <td (click)="viewEntity(entity.id)">{{entity.hostname}}</td>
+        <td (click)="viewEntity(entity.id)">{{entity.ipAddress}}</td>
+        <td (click)="viewEntity(entity.id)">{{entity.hostname}}</td>
+        <td (click)="viewEntity(entity.id)">{{entity.port}}</td>
         <td>
           <table-actions
             [service]="service"
